configure token and authorization in the frontend

--- a/ViajaFacil/Frontend/pages/admin-dashboard.html
+++ b/ViajaFacil/Frontend/pages/admin-dashboard.html
@@ -11,23 +11,23 @@
         <h2>Menu</h2>
         <ul>
           <li>
-            <a href="#users"> 👨‍💻 Usuários </a>
+            <a href="#users">Usuários </a>
             <ul class="submenu">
-                <li><a href="create-user">Criar Novo Usuário</a></li>
-                <li><a href="list-user">Listar Usuários</a></li>
+                <li><a href="./users/create-user.html">Criar Novo Usuário</a></li>
+                <li><a href="/pages/users/list-users.html">Listar Usuários</a></li>
             </ul>
           </li>
           <li>
-            <a href="#destines"> 🏖️ Destinos </a>
+            <a href="#destines">Destinos </a>
           </li>
           <li>
-            <a href="#reserves"> 📍 Reservas </a>
+            <a href="#reserves">Reservas </a>
           </li>
         </ul>
     </aside>
     <main>
       <h1>Hello, Henrique</h1>
     </main>
-
+<script src="../scripts/users/create-user.js"></script>
   </body>
 </html>
