--- a/ViajaFacil/Frontend/pages/users/create-user.html
+++ b/ViajaFacil/Frontend/pages/users/create-user.html
@@ -1,54 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/pages/create-user.css">
-    <title>Criar Novo Usuário</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/styles/pages/users/create-user.css" />
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+  />
+  <title>Criar Novo Usuário</title>
 </head>
 <body>
-    <div class="container">
-        <!-- Menu -->
-        <aside>
-            <h2>Menu</h2>
-            <ul>
-                <li>
-                    <a href="#users"> 👨‍💻 Usuários </a>
-                    <ul class="submenu">
-                        <li><a href="create-user">Criar Novo Usuário</a></li>
-                        <li><a href="list-user">Listar Usuários</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="#destines"> 🏖️ Destinos </a>
-                </li>
-                <li>
-                    <a href="#reserves"> 📍 Reservas </a>
-                </li>
+  <div class="container-fluid">
+    <div class="row min-vh-100">
+      <!-- Menu -->
+      <aside class="col-md-3 bg-light p-4 border-end">
+        <h2 class="h5 mb-4">Menu</h2>
+        <ul class="list-unstyled">
+          <li class="mb-2">
+            <a class="fw-bold" href="#users">Usuários</a>
+            <ul class="list-unstyled ms-3">
+              <li><a href="/pages/users/create-user.html">Criar Novo Usuário</a></li>
+              <li><a href="/pages/users/list-users.html">Listar Usuários</a></li>
             </ul>
-        </aside>
+          </li>
+          <li class="mb-2">
+            <a class="fw-bold" href="#destines">Destinos</a>
+          </li>
+          <li>
+            <a class="fw-bold" href="#reserves">Reservas</a>
+          </li>
+        </ul>
+      </aside>
 
-        <!-- Conteúdo Principal -->
-        <main>
-            <h3>Insira as informações para criar um novo usuário</h3>
-            <form id="create-user">
-                <label for="">Nome</label>
-                <input type="text" placeholder="Insira o nome do usuário">
+      <!-- Conteúdo Principal -->
+      <main class="col-md-9 p-5">
+        <!-- Alert Box -->
+        <div id="alertBox" class="alert d-none" role="alert"></div>
 
-                <label for="">E-mail</label>
-                <input type="text" placeholder="Insira o e-mail do usuário">
+        <h3 class="mb-4">Insira as informações para criar um novo usuário</h3>
+        <form id="createUserForm" class="bg-white p-4 rounded shadow-sm border">
+          <div class="mb-3">
+            <label for="name" class="form-label">Nome</label>
+            <input
+              type="text"
+              placeholder="Insira o nome do usuário"
+              id="name"
+              required
+              class="form-control"
+            />
+          </div>
 
-                <label for="">Senha</label>
-                <input type="text" placeholder="Defina uma senha para o usuário">
+          <div class="mb-3">
+            <label for="email" class="form-label">E-mail</label>
+            <input
+              type="text"
+              placeholder="Insira o e-mail do usuário"
+              id="email"
+              required
+              class="form-control"
+            />
+          </div>
 
-                <label for="">Admin</label>
-                <select name="admin" id="admin">
-                    <option value="true">Sim</option>
-                    <option value="false">Não</option>
-                </select>
-                <button type="submit">Criar Usuário</button>
-            </form>
-        </main>
+          <div class="mb-3">
+            <label for="password" class="form-label">Senha</label>
+            <input
+              type="password"
+              placeholder="Defina uma senha para o usuário"
+              id="password"
+              required
+              class="form-control"
+            />
+          </div>
+
+          <div class="mb-4">
+            <label for="isAdmin" class="form-label">Admin</label>
+            <select
+              name="admin"
+              id="isAdmin"
+              required
+              class="form-select"
+            >
+              <option value="true">Sim</option>
+              <option value="false">Não</option>
+            </select>
+          </div>
+
+          <button type="submit" class="btn btn-primary w-100">
+            Criar Usuário
+          </button>
+        </form>
+      </main>
     </div>
+  </div>
+
+  <!-- Scripts -->
+  <script src="/scripts/users/create-user.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
